Fix style bug (z-index issue)

--- a/src/scss/_colors.scss
+++ b/src/scss/_colors.scss
@@ -4,6 +4,7 @@ $grey: #1d2f4a;
 $light-grey: #213354;
 $lighter-grey: #24395c;
 
+$dark-white: #d1d1d1;
 $white: #eeeeee;
 
 $green: #3fc1d3;
